# aiv-ota-ip

./: Cargo.toml
assets/: index.html
assets/js/: data.json
shell/: collect_ip.sh
src/: main.rs
systemd/: aiv-ota-ip-collect.service  aiv-ota-ip.service
