[package]
name = "aiv-ota-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.4", features = ["headers"] }
hyper = { version = "0.14.24", features = ["full"] }
once_cell = "1.17.0"
redis = "0.22.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
version = "*"

[profile.release]
panic = 'abort'
